@@ -1,6 +1,6 @@
 <?php
 
-/*{{{*/
+/* {{{ */
 /**
  * ----------------------------------------------------------------------------
  * Mumsys_Cache
@@ -15,11 +15,9 @@
  * @category    Mumsys
  * @package     Mumsys_Library
  * @subpackage  Mumsys_Cache
- * @version     1.0.0
  * Created: 2013-12-10
- * @filesource
  */
-/*}}}*/
+/* }}} */
 
 
 /**
@@ -29,12 +27,13 @@
  * @package     Mumsys_Library
  * @subpackage  Mumsys_Cache
  */
-class Mumsys_Cache extends Mumsys_Abstract
+class Mumsys_Cache
+    extends Mumsys_Abstract
 {
     /**
      * Version ID information
      */
-    const VERSION = '1.0.0';
+    const VERSION = '1.1.1';
 
     /**
      * Flag if caching is enabled or not
@@ -65,8 +64,8 @@ class Mumsys_Cache extends Mumsys_Abstract
      */
     public function __construct( $group, $id )
     {
-        $this->_id = md5((string)$id);
-        $this->_group = (string)$group;
+        $this->_id = md5((string) $id);
+        $this->_group = (string) $group;
     }
 
 
@@ -80,14 +79,14 @@ class Mumsys_Cache extends Mumsys_Abstract
     {
         $filename = $this->_getFilename();
 
-        if ($fp = fopen($filename, 'xb')) {
-            if (flock($fp, LOCK_EX)) {
+        if ( $fp = fopen($filename, 'xb') ) {
+            if ( flock($fp, LOCK_EX) ) {
                 fwrite($fp, $data);
             }
             fclose($fp);
 
             // Set filemtime
-            touch($filename, time() + (int)$ttl);
+            touch($filename, time() + (int) $ttl);
         }
     }
 
@@ -108,13 +107,15 @@ class Mumsys_Cache extends Mumsys_Abstract
      *
      * @param string $group Groupname
      * @param string $id Unique ID
+     *
+     * @return boolean True if cache exists or false
      */
     public function isCached()
     {
-        if ($this->_enabled) {
+        if ( $this->_enabled ) {
             $filename = $this->_getFilename();
 
-            if (file_exists($filename) && filemtime($filename) > time()) {
+            if ( file_exists($filename) && filemtime($filename) > time() ) {
                 return true;
             }
             @unlink($filename);
@@ -125,13 +126,30 @@ class Mumsys_Cache extends Mumsys_Abstract
 
 
     /**
+     * Removes the specific cache file.
+     *
+     * @return boolean True on success
+     */
+    public function removeCache()
+    {
+        $filename = $this->_getFilename();
+
+        if ( file_exists($filename) ) {
+            @unlink($filename);
+        }
+
+        return true;
+    }
+
+
+    /**
      * Sets the filename prefix.
      *
      * @param string $prefix Filename Prefix to use
      */
     public function setPrefix( $prefix )
     {
-        $this->_prefix = (string)$prefix;
+        $this->_prefix = (string) $prefix;
     }
 
 
@@ -151,7 +169,7 @@ class Mumsys_Cache extends Mumsys_Abstract
      */
     public function setPath( $path )
     {
-        $this->_path = (string)$path;
+        $this->_path = rtrim((string) $path, '/') . '/';
     }
 
 
@@ -171,7 +189,7 @@ class Mumsys_Cache extends Mumsys_Abstract
      */
     public function setEnable( $flag )
     {
-        $this->_enabled = (bool)$flag;
+        $this->_enabled = (bool) $flag;
     }
 
 
