@@ -1,9 +1,11 @@
 <?php
 
+
 /**
- * Generated by PHPUnit_SkeletonGenerator 1.2.0 on 2013-12-10 at 21:11:07.
+ * Mumsys_Cache Tests
  */
-class Mumsys_CacheTest extends MumsysTestHelper
+class Mumsys_CacheTest
+    extends PHPUnit_Framework_TestCase
 {
     /**
      * @var Mumsys_Cache
@@ -11,13 +13,14 @@ class Mumsys_CacheTest extends MumsysTestHelper
     protected $_object;
     protected $_version;
 
+
     /**
      * Sets up the fixture, for example, opens a network connection.
      * This method is called before a test is executed.
      */
     protected function setUp()
     {
-        $this->_version = '1.0.0';
+        $this->_version = '1.1.1';
         $this->_versions = array(
             'Mumsys_Abstract' => Mumsys_Abstract::VERSION,
             'Mumsys_Cache' => $this->_version,
@@ -78,6 +81,20 @@ class Mumsys_CacheTest extends MumsysTestHelper
 
 
     /**
+     * @covers Mumsys_Cache::removeCache
+     * @covers Mumsys_Cache::_getFilename
+     */
+    public function testRemoveCache()
+    {
+        $actual1 = $this->_object->isCached();
+        $this->_object->removeCache();
+        $actual2 = $this->_object->isCached();
+        $this->assertTrue($actual1);
+        $this->assertFalse($actual2);
+    }
+
+
+    /**
      * @covers Mumsys_Cache::setPrefix
      * @covers Mumsys_Cache::getPrefix
      */
@@ -95,7 +112,7 @@ class Mumsys_CacheTest extends MumsysTestHelper
     public function testSetPath()
     {
         $this->_object->setPath('/tmp//');
-        $this->assertEquals('/tmp//', $this->_object->getPath());
+        $this->assertEquals('/tmp/', $this->_object->getPath());
     }
 
 
@@ -109,7 +126,6 @@ class Mumsys_CacheTest extends MumsysTestHelper
         $this->assertFalse($this->_object->isCached());
     }
 
-
     // test abstracts
 
 
@@ -121,6 +137,7 @@ class Mumsys_CacheTest extends MumsysTestHelper
         $this->assertEquals('Mumsys_Cache ' . $this->_version, $this->_object->getVersion());
     }
 
+
     /**
      * @covers Mumsys_Cache::getVersionID
      */
@@ -129,6 +146,7 @@ class Mumsys_CacheTest extends MumsysTestHelper
         $this->assertEquals($this->_version, $this->_object->getVersionID());
     }
 
+
     /**
      * @covers Mumsys_Cache::getVersions
      */
@@ -136,11 +154,10 @@ class Mumsys_CacheTest extends MumsysTestHelper
     {
         $possible = $this->_object->getVersions();
 
-        foreach ($this->_versions as $must => $value) {
+        foreach ( $this->_versions as $must => $value ) {
             $this->assertTrue(isset($possible[$must]));
             $this->assertTrue(($possible[$must] == $value));
         }
     }
-
 
 }
